[tool.poetry]
name = "proyectotopicos"
version = "0.1.0"
description = ""
authors = ["duskje <duskje@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mmh3 = "^4.0.1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
